BW Voicegroup using HGSS.RSE Instruments
voicegroup 274 - 286

--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -603,3 +603,9 @@ mus_casino_plus_6.mid:         -E -R50 -G133 -V090
 mus_casino_plus_7.mid:         -E -R50 -G150 -V079
 mus_casino_plus_8.mid:         -E -R50 -G166 -V076
 mus_casino_plus_9.mid:         -E -R50 -G163 -V090
+mus_bw_vs_wcs_champion.mid:    -E -R5 -G274 -V092
+mus_bw_musical_dlc_relic.mid:  -E -R5 -G278 -V080
+mus_bw_vs_trainer.mid:         -E -R5 -G276 -V090
+mus_bw_vs_subway_trainer.mid:  -E -R5 -G274 -V112
+mus_bw_vs_gym_leader.mid:      -E -R5 -G276 -V106
+mus_bw_entralink.mid:          -E -R5 -G274 -V078
