Redo Pokemon Golden Sun music
now in midi format and have properly assigned voicegroup.

--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -765,3 +765,34 @@ mus_thppme_449_strawberry_crisis.mid: -E -R50 -G809
 mus_thppme_450_complete_darkness.mid: -E -R50 -G809
 mus_thppme_451_starry_sky.mid: -E -R50 -G809
 mus_thppme_452_reverse_ideology.mid: -E -R50 -G809
+mus_pkmn_gsc_caves.mid: -E -R50 -G133
+mus_pkmn_gsc_cherrygrove.mid: -E -R50 -G173
+mus_pkmn_gsc_cycling.mid: -E -R50 -G141
+mus_pkmn_gsc_ecruteak.mid: -E -R50 -G139
+mus_pkmn_gsc_elmlab.mid: -E -R50 -G160
+mus_pkmn_gsc_exitsilver.mid: -E -R50 -G174
+mus_pkmn_gsc_goldenrod.mid: -E -R50 -G012
+mus_pkmn_gsc_gym.mid: -E -R50 -G158
+mus_pkmn_gsc_icepath.mid: -E -R50 -G133
+mus_pkmn_gsc_league.mid: -E -R50 -G154
+mus_pkmn_gsc_lighthouse.mid: -E -R50 -G158
+mus_pkmn_gsc_meetsilver.mid: -E -R50 -G174
+mus_pkmn_gsc_newbark.mid: -E -R50 -G163
+mus_pkmn_gsc_park.mid: -E -R50 -G163
+mus_pkmn_gsc_pokemoncenter.mid: -E -R50 -G162
+mus_pkmn_gsc_rocketbase.mid: -E -R50 -G166
+mus_pkmn_gsc_route29.mid: -E -R50 -G131
+mus_pkmn_gsc_route30.mid: -E -R50 -G151
+mus_pkmn_gsc_route34.mid: -E -R50 -G187
+mus_pkmn_gsc_route38.mid: -E -R50 -G133
+mus_pkmn_gsc_surfing.mid: -E -R50 -G164
+mus_pkmn_gsc_tower1.mid: -E -R50 -G165
+mus_pkmn_gsc_tower2.mid: -E -R50 -G158
+mus_pkmn_gsc_vermilion.mid: -E -R50 -G172
+mus_pkmn_gsc_viridian.mid: -E -R50 -G173
+mus_pkmn_gsc_vs_gymleader.mid: -E -R50 -G158
+mus_pkmn_gsc_vs_rocket.mid: -E -R50 -G158
+mus_pkmn_gsc_vs_silver.mid: -E -R50 -G155
+mus_pkmn_gsc_vs_trainer.mid: -E -R50 -G156
+mus_pkmn_gsc_vs_wild1.mid: -E -R50 -G157
+mus_pkmn_gsc_vs_wild2.mid: -E -R50 -G157
