Digimon Battle Spirit music

--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -950,3 +950,37 @@ mus_thppzgsk_399A_master_spark.mid:                      -E -R50 -G817
 mus_thppzgsk_400A_faith_is_for_the_transient_people.mid: -E -R50 -G817
 mus_thppzgsk_401A_plastic_mind.mid:                      -E -R50 -G819
 mus_thppzgsk_402A_master_spark.mid:                      -E -R50 -G815
+
+mus_dgmn_bs_intro.mid:                                   -E -R50 -G603
+mus_dgmn_bs_character_select.mid:                        -E -R50 -G603
+mus_dgmn_bs_round_results.mid:                           -E -R50 -G603
+mus_dgmn_bs_round_win.mid:                               -E -R50 -G603
+mus_dgmn_bs_round_tie.mid:                               -E -R50 -G603
+mus_dgmn_bs_ending_credits.mid:                          -E -R50 -G603
+mus_dgmn_bs_game_over.mid:                               -E -R50 -G603
+mus_dgmn_bs_unknown_jingle_1.mid:                        -E -R50 -G603
+mus_dgmn_bs_new_character_unlocked.mid:                  -E -R50 -G603
+mus_dgmn_bs_congratulations.mid:                         -E -R50 -G603
+mus_dgmn_bs_milenniummon_defeated.mid:                   -E -R50 -G603
+mus_dgmn_bs_brave_heart.mid:                             -E -R50 -G603
+mus_dgmn_bs_beat_hit.mid:                                -E -R50 -G603
+mus_dgmn_bs_wild_child_bound.mid:                        -E -R50 -G603
+mus_dgmn_bs_guilmon_stage.mid:                           -E -R50 -G603
+mus_dgmn_bs_terriermon_stage.mid:                        -E -R50 -G603
+mus_dgmn_bs_renamon_stage.mid:                           -E -R50 -G603
+mus_dgmn_bs_agumon_stage.mid:                            -E -R50 -G603
+mus_dgmn_bs_sukamon_stage.mid:                           -E -R50 -G603
+mus_dgmn_bs_wormmon_stage.mid:                           -E -R50 -G603
+mus_dgmn_bs_veemon_stage.mid:                            -E -R50 -G603
+mus_dgmn_bs_impmon_stage.mid:                            -E -R50 -G603
+mus_dgmn_bs_milenniummon_appears.mid:                    -E -R50 -G603
+mus_dgmn_bs_milenniummon_battle.mid:                     -E -R50 -G603
+mus_dgmn_bs_round_start.mid:                             -E -R50 -G603
+mus_dgmn_bs_round_end.mid:                               -E -R50 -G603
+mus_dgmn_bs_unknown_jingle_2.mid:                        -E -R50 -G603
+mus_dgmn_bs_evolution.mid:                               -E -R50 -G603
+
+mus_dgmn_bs_brave_heart_loop.mid:                        -E -R50 -G604
+mus_dgmn_bs_beat_hit_loop.mid:                           -E -R50 -G604
+mus_dgmn_bs_wild_child_bound_loop.mid:                   -E -R50 -G604
+mus_dgmn_bs_evolution_loop.mid:                          -E -R50 -G604
